--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -73,7 +73,10 @@ html(lang="en")
                   li.nav-item
                     a.nav-link(href='#') ИНФОЦЕНТР
                   li.nav-item
-                    a.nav-link(href='#') КОНТАКТЫ  
+                    a.nav-link(href='#') КОНТАКТЫ 
+                  li.nav-item
+                    a.nav-link(href='#')
+                    i.fal.fa-search   
                      
 
     main
