--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1514,6 +1514,11 @@ input
     top: 10em !important 
     left: 4em !important 
 
+@media (max-width: 1140px) 
+  .BUr
+    img
+      height: 100%
+
 
 @media (max-width: 1120px)   
   .ovwrap 
@@ -1526,7 +1531,17 @@ input
   .navigation
     display: none 
 
-    
+@media (max-width: 1010px)
+  .Bus
+    margin-top: 10px
+    display: inline !important
+  .BU  
+    margin: 0 auto !important
+  .busS
+    padding-top: 10px
+
+  .BUr
+    margin: 0 auto !important  
 
 @media (max-width: 1000px) 
   .ovwrap 
@@ -1569,9 +1584,7 @@ input
     top: 11em !important 
     left: 4em !important   
 
-  .ovwrap 
-    p
-      width: 350px
+  
 
 @media (max-width: 700px) 
   .za  
