--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -168,10 +168,10 @@ html(lang="en")
           div(class="busines")
             .container(class="bussin")
               .row(class="Bus")
-                .col-md-6.BU
+                .col-md-6.BU.col-sm-12
                   h1(class="busS") Юридическое сопровождение бизнеса от «МК-Правовые технологии»
                   p(class="busS-tex") Главный принцип нашей работы - качество. Постоянно следовать ему помогает сплоченная команда талантливых и энергичных сотрудников, способных сообща заниматься сложными проектами, никогда не допуская сбоев в работе. <br> <br> Мы обеспечиваем максимальный уровень профессионального обслуживания, который можно ожидать от крупной юридической фирмы.<br> <br> Нашу фирму отличают яркая индивидуальность и следование модели эффективного юридического обслуживания. Благодаря профессиональной гибкости мы находим творческие решения как обычных вопросов, так и неординарных проблем, возникающих у наших клиентов. <br> <br> Все наши рекомендации основаны на глубоких академических знаниях и опыте практического применения в хозяйственном праве.
-                .col-md-5.BUr
+                .col-md-5.BUr.col-sm-12
                   img(class="busS-im" src="images/Rectangle 141.png" class="img-fluid, width=500px", alt="картинка")
 
       .container
@@ -246,9 +246,9 @@ html(lang="en")
 
         .container
          .row(class="detu-wrap")
-          .col-4
+          .col-md-4.col-sm-12
             h2(class="wrap--a") Основные направления деятельности
-          .col-8
+          .col-md-8.col-sm-12
             p(class="wrap-D") Основной принцип нашей работы – максимальная открытость и доверительные отношения с каждым клиентом, с тем чтобы от начала и до конца совместной работы, не возникало никакого недопонимания. Мы ставим целью не только привлечение новых клиентов, но и поддержание длительных партнерских отношений с клиентами, которые уже воспользовались нашими услугами.<br> <br> Быстрота анализа и профессиональных действий наших юристов обеспечивают успешное решение, казалось бы, неразрешимых вопросов. Богатые знания и солидный опыт позволяют нам оказывать комплексную правовую помощь в ситуациях любой сложности.
 
         section(class="imagKar")
