--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -242,7 +242,8 @@ html(lang="en")
                 a(class="det-wr" href="#") ПОДРОБНЕЕ
               div(class="deta")
                 img(class="de-im" src="images/Dollar.svg", alt="картинка")       
-          button(class="DEta") Все услуги
+          div(class="Dtru")
+            button(class="DEta") Все услуги
 
         .container
          .row(class="detu-wrap")
@@ -285,7 +286,7 @@ html(lang="en")
                     div(class="bloc bloc1")
                       .container
                         .row(class="der")
-                          .col-12
+                          .col-md-12.col-sm-12
                             img(src="images/fot.png", alt="картинка")
                             div(class="Dwrap")
                               p(class="derwwr") директор
@@ -302,7 +303,9 @@ html(lang="en")
                               h3(class="derwwra") Валерий Мяснянкин
                               p(class="derw-wrapper") Представительство корпорации «VMSN GROUP, INC.» (США) в Республике Беларусь на протяжении нескольких лет сотрудничает с ООО «МК-Правовые технологии» в рамках сопровождения деятельности по юридическим вопросам, в том числе по вопросам ведения кадрового делопроизводства – абонентское обслуживание. Хотелось бы отметить работу специалистов ООО «МК-Правовые технологии» хорошими теплыми словами: надёжные, обязательные, пунктуальные. Вопросы любой сложности им по плечу. Работая с профессионалами МК-Правовые технологии, всегда можно рассчитывать...
                               a(href="#") ЧИТАТЬ ДАЛЕЕ
-                  button(class="Blotbut") ВСЕ ОТЗЫВЫ          
+                  .container            
+                    div(class="Blouf")
+                      button(class="Blotbut") ВСЕ ОТЗЫВЫ          
                 .carousel-item
                   div(class="Blot")
                     div(class="bloc bloc1")
@@ -325,7 +328,9 @@ html(lang="en")
                               h3(class="derwwra") Валерий Мяснянкин
                               p(class="derw-wrapper") Представительство корпорации «VMSN GROUP, INC.» (США) в Республике Беларусь на протяжении нескольких лет сотрудничает с ООО «МК-Правовые технологии» в рамках сопровождения деятельности по юридическим вопросам, в том числе по вопросам ведения кадрового делопроизводства – абонентское обслуживание. Хотелось бы отметить работу специалистов ООО «МК-Правовые технологии» хорошими теплыми словами: надёжные, обязательные, пунктуальные. Вопросы любой сложности им по плечу. Работая с профессионалами МК-Правовые технологии, всегда можно рассчитывать...
                               a(href="#") ЧИТАТЬ ДАЛЕЕ
-                  button(class="Blotbut") ВСЕ ОТЗЫВЫ       
+                  .container            
+                    div(class="Blouf")
+                      button(class="Blotbut") ВСЕ ОТЗЫВЫ                   
                 .carousel-item
                   div(class="Blot")
                     div(class="bloc bloc1")
@@ -348,7 +353,9 @@ html(lang="en")
                               h3(class="derwwra") Валерий Мяснянкин
                               p(class="derw-wrapper") Представительство корпорации «VMSN GROUP, INC.» (США) в Республике Беларусь на протяжении нескольких лет сотрудничает с ООО «МК-Правовые технологии» в рамках сопровождения деятельности по юридическим вопросам, в том числе по вопросам ведения кадрового делопроизводства – абонентское обслуживание. Хотелось бы отметить работу специалистов ООО «МК-Правовые технологии» хорошими теплыми словами: надёжные, обязательные, пунктуальные. Вопросы любой сложности им по плечу. Работая с профессионалами МК-Правовые технологии, всегда можно рассчитывать...
                               a(href="#") ЧИТАТЬ ДАЛЕЕ
-                  button(class="Blotbut") ВСЕ ОТЗЫВЫ       
+                  .container            
+                    div(class="Blouf")
+                      button(class="Blotbut") ВСЕ ОТЗЫВЫ                   
               a.carousel-control-prev.BRT(href='#carouselExampleCaptions' role='button' data-slide='prev')
                 span.carousel-control-prev-icon(aria-hidden='true')
                 span.sr-only Previous
@@ -401,64 +408,64 @@ html(lang="en")
               h2 Перечень оказываемых услуг
           .container    
             div(class="DWQ")
-              .row
-                .col-md-5    
+              .row(class="DDS")
+                .col-md-5.col-sm-12    
                   div(class="SErvscrol")
                     div(class="corol")
                     p(class="regi") Регистрации ИП и юрлиц
                     a(class="regin" href="#") ПОДРОБНЕЕ
-                .col-md-7
+                .col-md-7.col-sm-12 
                   div(class="SErvscroll")
                     div(class="coroll")
                     p(class="regi") Ликвидация, реорганизация и продажа бизнеса
                     a(class="reginn" href="#") ПОДРОБНЕЕ
             div(class="DWD")
-              .row
-                .col-md-6    
+              .row(class="DDS")
+                .col-md-6.col-sm-12     
                   div(class="SErvscr")
                     div(class="corol2")
                     p(class="regi") Взыскание дебиторской задолженности
                     a(class="reginy" href="#") ПОДРОБНЕЕ
-                .col-md-6
+                .col-md-6.col-sm-12 
                   div(class="SErvscr")
                     div(class="coroll2")   
                     p(class="regi") Письменные и устные консультации
                     a(class="reginy" href="#") ПОДРОБНЕЕ     
 
             div(class="DWW")
-              .row
-                .col-md-7    
+              .row(class="DDS")
+                .col-md-7.col-sm-12     
                   div(class="SErvscrt")
                     div(class="corol21")
                     p(class="regii") Разработка уставных документов и внесение <br> изменений в них
                     a(class="regin15" href="#") ПОДРОБНЕЕ
-                .col-md-5
+                .col-md-5.col-sm-12 
                   div(class="SErvscry")
                     div(class="coroll21")   
                     p(class="regi") Ведение переговоров
                     a(class="regin362" href="#") ПОДРОБНЕЕ  
 
             div(class="DWC")
-              .row
-                .col-md-6    
+              .row(class="DDS")
+                .col-md-6.col-sm-12     
                   div(class="SErvscr")
                     div(class="corol2")
                     p(class="regi") Комплексное сопровождение бизнеса
                     a(class="reginy" href="#") ПОДРОБНЕЕ
-                .col-md-6
+                .col-md-6.col-sm-12 
                   div(class="SErvscr")
                     div(class="coroll2")   
                     p(class="regi") Сопровождение деловых сделок
                     a(class="reginy" href="#") ПОДРОБНЕЕ
 
             div(class="DWt")
-              .row
-                .col-md-5    
+              .row(class="DDS")
+                .col-md-5.col-sm-12     
                   div(class="SErvscrol")
                     div(class="corol")
                     p(class="regi") Лицензирование бизнеса
                     a(class="regin362" href="#") ПОДРОБНЕЕ
-                .col-md-7
+                .col-md-7.col-sm-12 
                   div(class="SErvscroll")
                     div(class="coroll") 
                     p(class="regi") Решение правовых споров
@@ -473,11 +480,11 @@ html(lang="en")
       section(class="DAV")
         .container
           .row
-            .col-md-5
+            .col-md-5.col-sm-12 
               h2 Почему нам доверяют
               p Прозрачность и открытость для клиентов – наш принцип, который с самого начала исключает любые недопонимания. Мы тщательно продумали работу каждого юриста внутри коллектива, что обеспечивает высокое качество юридических услуг компании.
             .offset-md-1 
-            .col-md-5
+            .col-md-5.col-sm-12 
               div(class="brok")
                 div(class="brokkrug")
                   div(class="brokt")
