--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -479,7 +479,7 @@ html(lang="en")
 
       section(class="DAV")
         .container
-          .row
+          .row(class="Davi")
             .col-md-5.col-sm-12 
               h2 Почему нам доверяют
               p Прозрачность и открытость для клиентов – наш принцип, который с самого начала исключает любые недопонимания. Мы тщательно продумали работу каждого юриста внутри коллектива, что обеспечивает высокое качество юридических услуг компании.
@@ -512,7 +512,7 @@ html(lang="en")
         hr   
 
         .container
-          .row
+          .row(class="Davi")
             .col-md-5
               h2 Что получает клиент
               p Юристы нашей компании готовы дать четкие, основанные на фактах, консультации, касающиеся и «типовой», и нестандартной ситуации, опираясь на сложившуюся служебную практику и многолетний опыт. Мы объективно оцениваем риски и тщательно анализируем каждый случай.
@@ -611,14 +611,15 @@ html(lang="en")
                     a(class="Bss" href="#") Политики конфиденциальности
                   button.kons.btn.btn-primary(type='submit') ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
 
-          .row
+          .row(class="STimm")
             .col-md-6
               h2(class="stim") Стоимость юридических услуг в Минске
 
-          .row
+          .row(class="STimm")
             .col-md-7
               p(class="stims") Стоимость услуг формируется согласно тарифам, установленным в компании и в зависимости от времени, затраченного юристом на разрешение возникшей ситуации. Принцип прозрачности делает наши цены обоснованными и понятными для клиента.
-          button(class="sti") ТАРИФЫ
+          div(class="stiKrt")
+            button(class="sti") ТАРИФЫ
       hr(class="stik")
  
 
@@ -706,6 +707,7 @@ html(lang="en")
             p г. Гомель, пр. Ленина, д. 10, <br>оф. 901
             h1(class="ardr") gomel@jurisprudent.by
           div(class="all5")  
+            p(class="ybr") ВРЕМЯ РАБОТЫ
             span(class="tess") Прием посетителей
             p Ежедневно с 8.00 до 19.00 Выходной: суббота - воскресенье.
             span(class="tess") Прием звонков
