--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1296,6 +1296,9 @@ input
     color: rgba(0, 0, 0, 0.8)
     text-align: center
 
+.ybr
+  display: none
+
 .container
   max-width: 1170px !important
   margin: 0 auto  
@@ -1551,12 +1554,62 @@ input
   .proj 
     margin-left: 0     
  
+@media (max-width: 1160px)
+  .advan
+    text-align: center
+
+  .advant
+    flex-direction: column
+    align-items: center
+    justify-content: center 
+
+  .advant-aadvant1
+    margin-right: 0  
+    margin-bottom: 10px
 
 @media (max-width: 1140px) 
   .BUr
     img
       height: 100%
 
+  .DDS  
+    flex-direction: column
+    align-items: center
+    justify-content: center  
+
+  .scroll
+    text-align: center
+
+  .SErvscrol
+    width: 670px
+    margin-bottom: 10px   
+    margin-left: -96px
+
+  .SErvscr
+    margin-bottom: 10px  
+
+  .SErvscry
+    width: 670px
+    margin-left: -97px
+    margin-top: 10px 
+
+  .Yr
+    flex-direction: column
+    align-items: center  
+
+  .Yr-wrap
+    text-align: center
+
+  .Yr-but
+    margin-bottom: 10px    
+
+  .Davi
+    flex-direction: column
+    align-items: center
+    justify-content: center
+
+  .advantage 
+    padding-top: 30px  
 
 @media (max-width: 1120px)   
   .ovwrap 
@@ -1630,6 +1683,10 @@ input
     top: 5em !important 
     left: 4em !important         
 
+  .prakt
+    p 
+      width: 100%
+
   .col-md-5
     justify-content: center
     display: flex
@@ -1659,8 +1716,7 @@ input
 
   .prakt
     height: 100%
-    width: 350px
-
+ 
   .scroll
     text-align: center
 
@@ -1679,6 +1735,100 @@ input
 
   .regin 
     padding-right: 10px  
+
+  .Yr12
+    p
+      width: 100%  
+
+  .Davi
+    .col-md-5
+      flex-direction: column !important
+      align-items: center !important
+      justify-content: center !important  
+      
+  .organization
+    flex-direction: column
+    align-items: center
+    justify-content: center
+
+  .formik
+    margin-top: 25px     
+    
+  .stim
+    text-align: center
+    margin-left: 15px  
+
+  .STimm
+    align-items: center
+    justify-content: center
+
+  .stims
+    text-align: center
+    margin-left: 15px  
+
+  .stiKrt
+    margin: 0 auto
+    text-align: center
+    margin-top: 10px
+    margin-bottom: 15px
+
+  .texno
+    margin-left: 25px
+
+  .all
+    margin-left: 25px  
+
+  .all1   
+    margin-right: 10px
+
+  .str
+    margin-left: -76px
+    margin-top: -6px  
+
+@media (max-width: 780px) 
+  .prakt
+    p
+      width: 550px
+
+  .SErvscrol
+    margin-left: 0
+
+  .SErvscry
+    margin-left: 0
+
+  .DDS
+    .col-md-5.col-sm-12
+      align-items: end !important
+      justify-content: end !important
+
+  .texno2
+    width: 515px  
+
+  .texno3 
+    width: 145px
+    p
+      width: 100px
+
+@media (max-width: 760px) 
+  .texno3 
+    width: 115px
+
+  .texno2
+    width: 400px
+
+@media (max-width: 740px)   
+  .texno3 
+    width: 90px
+
+@media (max-width: 730px)   
+  .texno3 
+    width: 70px 
+
+@media (max-width: 710px)   
+  .texno3 
+    width: 50px      
+
+
 
 @media (max-width: 700px) 
   .za  
@@ -1699,6 +1849,38 @@ input
     button
       width: 115px
       height: 26px  
+
+@media (max-width: 695px)   
+  .texno3 
+    width: 35px    
+
+@media (max-width: 675px)   
+  .texno3 
+    width: 15px    
+
+@media (max-width: 650px)   
+  .texno3 
+    width: 0px  
+    p 
+      width: 100%
+  .texno2
+    width: 150px       
+
+@media (max-width: 635px)    
+  .texno
+    flex-direction: column
+    align-items: center
+  .all 
+    flex-direction: column 
+    align-items: center
+
+  .ybr
+    display: block
+
+  .texno3  
+    display: none   
+    
+
 
 @media (max-width: 400px) 
   .namber span
