--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -243,7 +243,7 @@ html(lang="en")
               div(class="deta")
                 img(class="de-im" src="images/Dollar.svg", alt="картинка")       
           div(class="Dtru")
-            button(class="DEta") Все услуги
+            button(class="DEta") ВСЕ УСЛУГИ
 
         .container
          .row(class="detu-wrap")
@@ -481,8 +481,8 @@ html(lang="en")
         .container
           .row(class="Davi")
             .col-md-5.col-sm-12 
-              h2 Почему нам доверяют
-              p Прозрачность и открытость для клиентов – наш принцип, который с самого начала исключает любые недопонимания. Мы тщательно продумали работу каждого юриста внутри коллектива, что обеспечивает высокое качество юридических услуг компании.
+              h2(class="Daaav") Почему нам доверяют
+              p(class="Daaavs") Прозрачность и открытость для клиентов – наш принцип, который с самого начала исключает любые недопонимания. Мы тщательно продумали работу каждого юриста внутри коллектива, что обеспечивает высокое качество юридических услуг компании.
             .offset-md-1 
             .col-md-5.col-sm-12 
               div(class="brok")
@@ -514,8 +514,8 @@ html(lang="en")
         .container
           .row(class="Davi")
             .col-md-5
-              h2 Что получает клиент
-              p Юристы нашей компании готовы дать четкие, основанные на фактах, консультации, касающиеся и «типовой», и нестандартной ситуации, опираясь на сложившуюся служебную практику и многолетний опыт. Мы объективно оцениваем риски и тщательно анализируем каждый случай.
+              h2(class="Daaav") Что получает клиент
+              p(class="Daaavs") Юристы нашей компании готовы дать четкие, основанные на фактах, консультации, касающиеся и «типовой», и нестандартной ситуации, опираясь на сложившуюся служебную практику и многолетний опыт. Мы объективно оцениваем риски и тщательно анализируем каждый случай.
             .offset-md-1 
             .col-md-5
               div(class="brok")
