--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -112,14 +112,15 @@ header
     padding-bottom: 50px
 
 button
-  font-family: 'Commissioner', sans-serif
+  font-family: 'Commissioner' , sans-serif !important
   font-weight: bold
-  font-size: 13px
-  line-height: 30px
+  font-style: normal
+  font-size: 13px !important
+  line-height: 30px !important
   width: 200px
   height: 45px
   text-align: center
-  text-transform: uppercase
+  text-transform: uppercase !important
   letter-spacing: 0.08em
   color: #FFFFFF
   cursor: pointer
@@ -358,7 +359,7 @@ button
 
 .found
   margin-bottom: 35px
-  font-family: 'Commissioner' sans-serif
+  font-family: Commissioner
   font-style: normal
   font-weight: normal
   font-size: 28px
@@ -515,6 +516,15 @@ button
 
 .Dwrap
   padding: 20px 50px 25px 50px  
+  a
+    font-family: 'Lato' , sans-serif
+    font-style: normal
+    font-weight: 600
+    font-size: 12px
+    line-height: 20px
+    letter-spacing: 0.02em
+    text-transform: uppercase
+    color: rgba(0, 0, 0, 0.5)
 
 .derwwr
   font-family: 'Lato', sans-serif
@@ -618,14 +628,15 @@ button
   color: rgba(0, 0, 0, 0.9) 
 
 .prakt
-  width: 720px
-  height: 100px 
-  font-family: 'Lato' , sans-serif
-  font-style: normal
-  font-weight: 300
-  font-size: 15px
-  line-height: 25px
-  color: rgba(0, 0, 0, 0.8) 
+  p
+    width: 720px
+    height: 100px 
+    font-family: 'Lato' , sans-serif
+    font-style: normal
+    font-weight: 300
+    font-size: 15px
+    line-height: 25px
+    color: rgba(0, 0, 0, 0.8) 
 
 .GRprava
   position: relative
@@ -643,18 +654,33 @@ button
 
 .ob
   padding: 40px 50px 55px 50px
+  h4
+    font-family: Commissioner
+    font-style: normal
+    font-weight: normal
+    font-size: 26px
+    line-height: 45px
+    color: rgba(0, 0, 0, 0.9)
+  p
+    font-family: 'Lato' , sans-serif
+    font-style: normal
+    font-weight: 300
+    font-size: 15px
+    line-height: 25px
+    color: rgba(0, 0, 0, 0.8)
 
 .imgKart
   margin-bottom: 60px
 
 .scroll
-  font-family: 'Commissioner' , sans-serif
-  font-style: normal
-  font-weight: normal
-  font-size: 28px
-  line-height: 40px
-  letter-spacing: 0.03em
-  color: rgba(0, 0, 0, 0.9)
+  h2
+    font-family: 'Commissioner' , sans-serif
+    font-style: normal
+    font-weight: normal
+    font-size: 28px
+    line-height: 40px
+    letter-spacing: 0.03em
+    color: rgba(0, 0, 0, 0.9)
 
 .SErvscrol
   background: #FFFFFF
@@ -736,6 +762,15 @@ button
   letter-spacing: 0.02em
   text-transform: uppercase
   color: rgba(0, 0, 0, 0.5) 
+
+.re
+  h4
+    font-family: Commissioner
+    font-style: normal
+    font-weight: normal
+    font-size: 26px
+    line-height: 45px
+    color: rgba(0, 0, 0, 0.9)
 
 .SErvscroll
   width: 670px
@@ -844,6 +879,24 @@ button
   background: #FFFFFF
   padding-top: 64px
   padding-bottom: 105px
+
+.Daaav
+  font-family: Commissioner
+  font-style: normal
+  font-weight: normal
+  font-size: 28px
+  line-height: 40px
+  letter-spacing: 0.03em
+  color: rgba(0, 0, 0, 0.9) 
+  margin-bottom: 15px
+
+.Daaavs
+  font-family: 'Lato' , sans-serif
+  font-style: normal
+  font-weight: 300
+  font-size: 15px
+  line-height: 25px
+  color: rgba(0, 0, 0, 0.8)  
 
 .brok
   color: #DEC377
@@ -992,6 +1045,13 @@ hr
   height: 365px
   h2 
     padding-bottom: 35px
+    font-family: Commissioner
+    font-style: normal
+    font-weight: normal
+    font-size: 28px
+    line-height: 40px
+    letter-spacing: 0.03em
+    color: rgba(0, 0, 0, 0.9)
 
 .cooperater
   display: flex
@@ -1025,25 +1085,27 @@ hr
     margin: 0
 
 .coop-wrap
-  width: 400px 
-  font-family: 'Lato' , sans-serif
-  font-style: normal
-  font-weight: 600
-  font-size: 15px
-  line-height: 25px
-  display: flex
-  align-items: center
-  color: rgba(0, 0, 0, 0.8)   
+  p
+    width: 400px 
+    font-family: 'Lato' , sans-serif
+    font-style: normal
+    font-weight: normal
+    font-size: 15px
+    line-height: 25px
+    display: flex
+    align-items: center
+    color: rgba(0, 0, 0, 0.8)   
 
 .dok
-  padding-top: 19px
-  font-family: 'Lato' , sans-serif
-  font-style: normal
-  font-weight: 300
-  font-size: 14px
-  line-height: 25px
-  letter-spacing: 0.01em
-  color: rgba(0, 0, 0, 0.8)  
+  p
+    padding-top: 19px
+    font-family: 'Lato' , sans-serif
+    font-style: normal
+    font-weight: 300
+    font-size: 14px
+    line-height: 25px
+    letter-spacing: 0.01em
+    color: rgba(0, 0, 0, 0.8)  
 
 form
   width: 570px
@@ -1060,6 +1122,31 @@ input
 
 .formik 
   padding: 50px 40px !important
+
+.mary
+  font-family: Commissioner
+  font-style: normal
+  font-weight: 500
+  font-size: 13px
+  line-height: 20px
+  letter-spacing: 0.01em
+  color: rgba(0, 0, 0, 0.5)
+
+.form-control
+  font-family: 'Lato' , sans-serif
+  font-style: normal
+  font-weight: 300 !important
+  font-size: 15px !important
+  line-height: 25px !important
+  color: rgba(0, 0, 0, 0.5) !important
+  opacity: 0.6 
+
+label
+  font-family: Commissioner
+  font-size: 13px
+  line-height: 20px
+  letter-spacing: 0.01em
+  color: rgba(0, 0, 0, 0.5)
 
 .But
   margin: 0  
@@ -1121,11 +1208,25 @@ input
 .texno1
   width: 270px
   height: 60px
+  h5
+    font-family: Commissioner
+    font-style: normal
+    font-weight: normal
+    font-size: 20px
+    line-height: 30px
+    color: rgba(0, 0, 0, 0.9)
 
 .texno2
   p
     margin: 0
     padding-top: 35px
+    font-family: 'Lato' , sans-serif
+    font-style: normal
+    font-weight: normal
+    font-size: 15px
+    line-height: 25px
+    text-transform: uppercase
+    color: rgba(0, 0, 0, 0.5)
   width: 640px
   height: 60px
   border-bottom: 1px solid rgba(0, 0, 0, 0.1)
@@ -1134,6 +1235,14 @@ input
   width: 170px  
   height: 60px
   border-bottom: 1px solid rgba(0, 0, 0, 0.1)
+  p
+    font-family: 'Lato' , sans-serif
+    font-style: normal
+    font-weight: normal
+    font-size: 15px
+    line-height: 25px
+    text-transform: uppercase
+    color: rgba(0, 0, 0, 0.5)
 
   p
     margin: 0
