--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -671,6 +671,8 @@ button
 
 .imgKart
   margin-bottom: 60px
+  img
+    width: 100%
 
 .scroll
   h2
@@ -1732,6 +1734,10 @@ label
     display: none 
 
 @media (max-width: 1010px)
+  .detu-wrap
+    flex-direction: column
+    align-items: center
+    justify-content: center
   .Bus
     margin-top: 10px
     display: inline !important
@@ -1860,6 +1866,10 @@ label
     align-items: center
     justify-content: center
 
+  .dok
+    p
+      text-align: center  
+
   .formik
     margin-top: 25px     
     
@@ -1894,6 +1904,46 @@ label
     margin-left: -76px
     margin-top: -6px  
 
+@media (max-width: 950px) 
+  .SErvscroll
+    width: 100%
+
+  .reginn 
+    padding-left: 320px
+
+  .regi
+    padding-bottom: 10px  
+
+  .reginy
+    padding-left: 320px
+
+  .regin15
+    padding-left: 320px 
+  
+  .regii
+    padding-bottom: 3px
+
+
+  .SErvscr
+    width: 100%
+
+  .SErvscrt
+    width: 100%
+
+@media (max-width: 880px) 
+  .regin
+    padding-right: 150px
+
+@media (max-width: 830px) 
+  .Yr-wrap 
+    p 
+      width: 500px
+      margin-bottom: 94px
+
+  .reginy
+    padding-left: 170px    
+
+
 @media (max-width: 780px) 
   .prakt
     p
@@ -1904,11 +1954,6 @@ label
 
   .SErvscry
     margin-left: 0
-
-  .DDS
-    .col-md-5.col-sm-12
-      align-items: end !important
-      justify-content: end !important
 
   .texno2
     width: 515px  
@@ -1988,7 +2033,48 @@ label
 
   .texno3  
     display: none   
+
+  .frame
+    width: 100%
+  form
+    width: 450px !important
+    margin-left: 50px
+
+  .kons
+    width: 360px !important  
+
+  .Daaavs
+    text-align: center  
+
+  .prakt 
+    p
+      width: 450px  
+   
     
+@media (max-width: 520px) 
+  .Yr-wrap p
+    width: 350px
+    margin-bottom: 170px
+
+  .prakt 
+    p
+      width: 300px    
+      padding-bottom: 180px
+
+@media (max-width: 490px)      
+  .busS-tex
+    width: 350px
+    text-align: center
+    margin-left: 35px
+
+  .DEta
+    margin-bottom: 10px  
+
+@media (max-width: 470px)
+  .GRinter
+    display: flex
+    flex-direction: column
+    align-items: center
 
 
 @media (max-width: 400px) 
